am i into git hub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <li>must ware the helmet</li>
         <li>riding gare</li>  
 </ol>
-<table>
+<table border="5">
+    <tr><td> s no.</td></tr>
+    <tr><td> score</td></tr>
+    <tr><td> batch </td></tr>
+    <tr><td> quality </td></tr>
+</table>
+<form action="">
     <label >enter emil id or phone number:</label>
    
     <input type="email" name="" id=""> 
@@ -37,10 +43,9 @@
     <input type="file" name="" id="">
     <br><br>
     <label for="select qulification"></label>
-    <input:select></input:select>
-   
-
-</table>
+    <input:select></input:select
+    
+</form>
  
 </body>
 </html>
