--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li>must ware the helmet</li>
         <li>riding gare</li>  
 </ol>
-<table border="5">
+<table border="4">
     <tr><td> s no.</td></tr>
     <tr><td> score</td></tr>
     <tr><td> batch </td></tr>
@@ -28,7 +28,7 @@
 <form action="">
     <label >enter emil id or phone number:</label>
    
-    <input type="email" name="" id=""> 
+    <input type="email" name="" id="" placeholder="enter username"> 
     <br><br>
     <label >enter password:</label>
 
